# notas_lave

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  notas-lave-expert-review.md
engine/: .coverage  .dockerignore  .env.example  Dockerfile  coverage.json  lab_runner.py  notas_lave.db-shm  notas_lave.db-wal  pyproject.toml  run.py  run_dev.py
engine/data/: integrity_checks.json  lab_checkin_reports.json  lab_risk_state.json  rate_limit_state.json  system_state.json
engine/scripts/: migrate_schema.py  migrate_unknown_strategy.py  validate_migration.py
engine/src/: config.py  log_config.py
engine/src/agent/: autonomous_trader.py  config.py  trade_learner.py
engine/src/alerts/: scanner.py  telegram.py
engine/src/api/: server.py
engine/src/backtester/: engine.py  monte_carlo.py
engine/src/claude_engine/: decision.py
engine/src/confluence/: scorer.py
engine/src/data/: economic_calendar.py  historical_downloader.py  instruments.py  market_data.py  models.py
engine/src/execution/: base_broker.py  binance_testnet.py  coindcx.py  mt5_broker.py  paper_trader.py
engine/src/journal/: database.py
engine/src/lab/: lab_config.py  lab_risk.py  lab_trader.py
engine/src/learning/: ab_testing.py  accuracy.py  analyzer.py  claude_review.py  optimizer.py  progress.py  recommendations.py
engine/src/notas_lave/: __init__.py  config.py  log_config.py
engine/src/risk/: manager.py
engine/src/strategies/: base.py  bollinger_bands.py  break_retest.py  camarilla_pivots.py  ema_crossover.py  ema_gold.py  fibonacci.py  london_breakout.py  momentum_breakout.py  ny_open_range.py  order_blocks.py  registry.py  rsi_divergence.py  session_killzone.py  stochastic.py  vwap.py
engine/tests/: conftest.py  test_calendar.py  test_data_integrity.py  test_instruments.py  test_risk_manager.py  test_startup.py  test_strategies.py  test_trade_grader.py  test_trailing_stop.py
engine/tests/integration/: conftest.py  test_broker_contract.py  test_broker_reconciliation.py  test_end_to_end.py  test_error_visibility.py  test_trade_atomicity.py  test_websocket.py  test_ws_data_integrity.py
engine/tests/invariant/: test_accounting.py  test_balance_reconciliation.py  test_pnl_integrity.py
engine/tests/property/: conftest.py  test_leaderboard_properties.py  test_pnl_properties.py  test_position_sizing.py  test_risk_properties.py
engine/tests/unit/: test_backtester.py  test_binance_broker.py  test_broker_registry.py  test_coindcx_mt5_brokers.py  test_confluence_scorer.py  test_delta_broker.py  test_errors.py  test_event_bus.py  test_event_store.py  test_events.py  test_indicators.py  test_lab_engine.py  test_leaderboard.py  test_log_config.py  test_ml_features.py  test_models.py  test_models_coverage.py  test_monte_carlo.py  test_observability.py  test_paper_broker.py  test_pnl.py  test_ports.py  (+9 more)
(+135 files in other folders)
