[project]
name = "notas-lave-engine"
version = "0.1.0"
description = "AI-powered trading decision engine for scalping Gold, Silver, BTC, ETH"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    # AI
    "anthropic>=0.42.0",
    # Data & Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b0",
    "yfinance>=0.2.40",
    "websockets>=13.0",
    # Storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Scheduling
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
broker = [
    # Add when ready for paper trading
    # "oandapyV20>=0.7.2",
    # "alpaca-trade-api>=3.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
