[project]
name = "notas-lave-engine"
version = "2.0.21"
description = "AI-powered trading decision engine for scalping Gold, Silver, BTC, ETH"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "pydantic>=2.10.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",  # SEC-09: was missing
    "python-dotenv>=1.0.0,<2.0",
    # AI
    "anthropic>=0.42.0,<1.0",
    # Data & Analysis
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0,<3.0",
    "pandas-ta>=0.3.14b0",
    "yfinance>=0.2.40,<1.0",  # SEC-09: pin upper bound
    "twelvedata>=1.0.0,<2.0",  # SEC-09: was missing
    "ccxt>=4.0.0,<5.0",  # SEC-09: was missing
    "websockets>=13.0,<15.0",
    # HTTP client
    "httpx>=0.27.0,<1.0",  # SEC-09: was in dev only, needed at runtime
    # Storage
    "sqlalchemy>=2.0.0,<3.0",
    "aiosqlite>=0.20.0,<1.0",
    # Scheduling
    "apscheduler>=3.10.0,<4.0",
    # Observability
    "structlog>=24.0.0,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "hypothesis>=6.100.0",
    "mutmut>=3.0.0",
]
broker = [
    # Add when ready for paper trading
    # "oandapyV20>=0.7.2",
    # "alpaca-trade-api>=3.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "unit: fast isolated tests",
    "integration: broker integration tests (need BROKER env var)",
    "invariant: critical accounting invariants",
    "smoke: post-deploy health checks",
]

[tool.coverage.run]
source = ["notas_lave"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 49
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.hypothesis]
max_examples = 200
deadline = 2000
